[package]
name = "gbrls-b10g"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.10", features = ["derive"] }
fronma = { version = "0.2.0", features = ["toml", "default"] }
zip-extract = "0.1.2"
thiserror = "1.0.50"
walkdir = "2.4.0"

